--- a/styles.css
+++ b/styles.css
@@ -211,3 +211,86 @@
     line-height: 24px;
     color: #969bab;
   }
+
+  .main-flexbox {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    background: #d5fafc;
+    margin-top: 65px;
+    background-repeat: no-repeat;
+    padding-bottom: 80px;
+  }
+  
+  .background-image{
+    width: 143px;
+    height: 120px;
+    opacity: 60%;
+    position: absolute;
+    top: 1750px;
+    left: 175px;
+   }
+
+  .test-flexbox-1 {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 120px;
+  }
+  
+  .test-flexbox-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    margin-top: 170px;
+  }
+  
+  .sub-test-1 {
+    max-width: 350px;
+    border-radius: 8px;
+    background-color: #ffffff;
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    align-items: flex-start;
+    margin-left: 55px;
+  }
+  
+  .sub-test-2 {
+    max-width: 445px;
+    border-radius: 8px;
+    background-color: #ffffff;
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    align-items: flex-start;
+  }
+  
+  .sub-test-3 {
+    max-width: 350px;
+    border-radius: 8px;
+    background-color: #ffffff;
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    align-items: flex-start;
+  }
+  
+  .feedback {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+  
+  .quote {
+    display: flex;
+    align-items: flex-start;
+    gap: 0 16px;
+  }
+  
+  .logo-dimensions {
+    height: 40px;
+  }
